# photostore

./: .gitignore  README.md  SETUP_ADMIN_CLI.md  START-HERE.md  docker-compose.yml  test-login.ps1  test-login.sh
backend/: .dockerignore  .env  .gitignore  CHANGELOG-SIMPLE-HMAC.md  Dockerfile  FOLDER-STRUCTURE.md  README-API-SIGNATURE.md  README-EMBEDDINGS.md  README.md  SEARCH-ARCHITECTURE.md  SIMPLE-API-GUIDE.md  UPLOAD-FLOW.md  celery_app.py  celerybeat-schedule.dir  docker-compose.yml  env.example  generate_signature.py  init_db.py  main.py  package-lock.json  quick_test.py  requirements.txt  simple_client_example.py  start.bat  start.sh
backend/api/: deps.py  main.py
backend/core/: config.py  security.py
backend/db/: crud_asset.py  crud_embedding.py  crud_folder.py  crud_item.py  crud_tag.py  crud_thumbnail.py  crud_user.py  session.py  supabase_client.py
backend/dependencies/: api_key_middleware.py  auth_middleware.py  clip_service.py  dependencies.py  external_auth.py  static_middleware.py
backend/faiss_indices/: project_5.index  project_5_mapping.pkl  project_8.index  project_8_mapping.pkl
backend/migrations/: run_migration.py
backend/models/: __init__.py  assets.py  embeddings.py  folders.py  projects.py  tags.py  thumbnails.py  users.py
backend/services/: embeddings_service.py  faiss_index.py  tagging_service.py
backend/tasks/: cleanup_tasks.py
backend/utils/: build_tree.py  filename_utils.py  folder_finder.py  path_builder.py  slug.py
frontend/: Dockerfile  IMAGE_EDITOR_GUIDE.md  PROGRESS_BAR_GUIDE.md  README-SETUP.md  env-example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  (+4 more)
sdk/: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  setup.py
sdk/python/: README.md  __init__.py  example.py  photostore_sdk.py  setup.py
(+106 files in other folders)
